No need for migrations-dist folder.

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
     "test": "npm run package:build && cross-env DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey DOCKER_DEEPLINKS_URL=http://localhost:3006 NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.js *.js --testTimeout=50000",
     "benchmark": "export DEEPLINKS_HASURA_PATH=localhost:8080; export DEEPLINKS_HASURA_SSL=0; export DEEPLINKS_HASURA_SECRET=myadminsecretkey; ts-node benchmarks/index.ts",
-    "migrate": "mkdir -p migrations-dist && npm run package:build && cp migrations/*.js migrations-dist/ && npx migrate up --migrations-dir migrations-dist",
-    "unmigrate": "mkdir -p migrations-dist && npm run package:build && cp migrations/*.js migrations-dist/ && npx migrate down --migrations-dir migrations-dist",
+    "migrate": "npm run package:build && npx migrate up --matches '*.js'",
+    "unmigrate": "npm run package:build && npx migrate down --matches '*.js'",
     "start-engine-docker": "cross-env JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" HASURA_GRAPHQL_ENABLE_CONSOLE=true HASURA_GRAPHQL_DEV_MODE=true HASURA_GRAPHQL_LOG_LEVEL=debug HASURA_GRAPHQL_ENABLED_LOG_TYPES=\"startup, http-log, webhook-log, websocket-log, query-log\" HASURA_GRAPHQL_ADMIN_SECRET=myadminsecretkey HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true HASURA_GRAPHQL_UNAUTHORIZED_ROLE=undefined npm run start-engine-docker-core",
     "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura && npm run docker",
     "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
