--- a/.gitignore
+++ b/.gitignore
@@ -119,14 +119,22 @@ projects/app/electron/app
 # migrations
 .migrate
 
-# deepcase
+# deeplinks
 /*.js
 /*.js.map
-/imports/*.js
-/imports/*.js.map
-/imports/router/*.js
-/imports/router/*.js.map
-/imports/router/*.d.ts
+/*.d.ts
+/imports/**/*.js
+/imports/**/*.js.map
+/imports/**/*.d.ts
+/migrations/**/*.js
+/migrations/**/*.js.map
+/migrations/**/*.d.ts
+/tests/**/*.js
+/tests/**/*.js.map
+/tests/**/*.d.ts
+/benchmarks/**/*.js
+/benchmarks/**/*.js.map
+/benchmarks/**/*.d.ts
 
 # snapshots
 /snapshots/[0-9]*
