--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
     "test": "npm run package:build && cross-env DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey DOCKER_DEEPLINKS_URL=http://localhost:3006 NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.js *.js --testTimeout=50000",
     "benchmark": "export DEEPLINKS_HASURA_PATH=localhost:8080; export DEEPLINKS_HASURA_SSL=0; export DEEPLINKS_HASURA_SECRET=myadminsecretkey; ts-node benchmarks/index.ts",
-    "migrate": "npm run package:build && npx migrate up --matches '*.js'",
-    "unmigrate": "npm run package:build && npx migrate down --matches '*.js'",
+    "migrate": "npm run package:build && npx migrate@latest up --matches '*.js'",
+    "unmigrate": "npm run package:build && npx migrate@latest down --matches '*.js'",
     "start-engine-docker": "npm run start-engine-docker-core",
     "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura && npm run docker",
     "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
