--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "fix-path": "^4.0.0",
+    "fs-extra": "^11.1.1",
     "get-port": "^5.1.1",
     "gists": "^2.0.0",
     "graphql": "^15.8.0",
