--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "fix-path": "^4.0.0",
-    "fs-extra": "^11.1.1",
     "get-port": "^5.1.1",
     "gists": "^2.0.0",
     "graphql": "^15.8.0",
@@ -90,7 +89,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/fs-extra": "^11.0.1",
     "clean-webpack-plugin": "^4.0.0",
+    "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
     "migrate": "^2.0.0",
     "react-dom": "^18.2.0",
