--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,3 +14,5 @@ jobs:
     uses: deep-foundation/workflows/.github/workflows/npm-publish.yml@main
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    with:
+      build-script-name: "package:build"
