--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "migrate": "^2.0.0",
     "react-dom": "^18.2.0",
     "ts-jest": "^29.1.0",
