--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "react-dom": "^18.2.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
+    "typescript": "5.0.4",
     "webpack": "^5.84.1",
     "webpack-cli": "^5.1.1"
   }
