--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.197",
+  "version": "0.0.198",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -34,6 +34,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "@deep-foundation/deepcase": "0.0.21",
+    "@deep-foundation/finder": "^0.0.3",
     "@deep-foundation/hasura": "^0.0.45",
     "@deep-foundation/materialized-path": "0.0.24",
     "@deep-foundation/npm-packager": "0.0.25",
