--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -9,4 +9,4 @@ jobs:
   main:
     uses: deep-foundation/workflows/.github/workflows/npm-build.yml@main
     with:
-      build-command: "npm run build"
+      build-command: "npm run package:build"
