--- a/.github/workflows/npm-build.yml
+++ b/.github/workflows/npm-build.yml
@@ -8,3 +8,5 @@ on:
 jobs:
   main:
     uses: deep-foundation/workflows/.github/workflows/npm-build.yml@main
+    with:
+      build-command: ${{ env.NPM_BUILD_COMMAND }}
