--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,6 +15,6 @@ jobs:
     secrets:
       npm-token: ${{ secrets.NPM_TOKEN }}
     with:
-      build-command: "npm run package:build"
-      test-command: "echo 'Tests are temporarely disabled'"
+      build-command: ${{ env.NPM_BUILD_COMMAND }}
+      test-command: ${{ env.NPM_TEST_COMMAND }}
       should-generate-documentation: false
