--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "isolatedModules": true,
-    "declaration": true
+    "declaration": true,
   }
 }
