--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "electron": "^13.1.9",
+    "electron-root-path": "^1.1.0",
     "fix-path": "^4.0.0",
     "get-port": "^5.1.1",
     "gists": "^2.0.0",
