--- a/package.json
+++ b/package.json
@@ -57,7 +57,6 @@
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "electron": "^13.1.9",
-    "electron-root-path": "^1.1.0",
     "fix-path": "^4.0.0",
     "get-port": "^5.1.1",
     "gists": "^2.0.0",
@@ -77,6 +76,7 @@
     "prompt": "^1.3.0",
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
+    "root-path-electron": "^1.3.3",
     "supports-color": "^9.3.1",
     "uniqid": "^5.4.0",
     "url": "^0.11.0",
