--- a/package.json
+++ b/package.json
@@ -35,16 +35,16 @@
     "@apollo/client": "^3.7.14",
     "@deep-foundation/deepcase": "^0.0.23",
     "@deep-foundation/finder": "^0.0.4",
-    "@deep-foundation/hasura": "^0.0.45",
-    "@deep-foundation/materialized-path": "0.0.24",
+    "@deep-foundation/hasura": "^0.0.46",
+    "@deep-foundation/materialized-path": "^0.0.25",
     "@deep-foundation/npm-packager": "^0.0.29",
     "@deep-foundation/npm-packager-ui": "0.0.8",
-    "@deep-foundation/react-hasura": "0.0.15",
+    "@deep-foundation/react-hasura": "^0.0.16",
     "@deep-foundation/store": "^0.0.19",
     "@deep-foundation/tsx": "^0.0.4",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
-    "@types/react": "^18.2.7",
+    "@types/react": "^18.2.15",
     "apollo-server": "^2.26.1",
     "apollo-server-core": "^3.12.0",
     "apollo-server-express": "^3.12.0",
