--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^18.2.0",
     "rimraf": "^5.0.1",
     "root-path-electron": "^1.3.3",
+    "sudo-prompt": "^9.2.1",
     "supports-color": "^9.3.1",
     "uniqid": "^5.4.0",
     "url": "^0.11.0",
