--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "snapshot:dump": "node snapshots/dump.js"
   },
   "bin": {
-    "deeplinks": "./call.js"
+    "deeplinks": "./call.cjs"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
