--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.264",
+  "version": "0.0.265",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
+    "@deep-foundation/deepcase-opened": "^0.0.1",
     "@deep-foundation/hasura": "^0.0.46",
     "@deep-foundation/materialized-path": "^0.0.25",
     "@deep-foundation/npm-packager": "^0.0.30",
