--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
       "dom",
       "es6",
       "es7",
-      "ES2020"
+      "es2022.error"
     ],
     "resolveJsonModule": true,
     "esModuleInterop": true,
