--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       MIGRATIONS_SCHEMA: '${MIGRATIONS_SCHEMA}'
       MIGRATIONS_RL_TABLE: '${MIGRATIONS_RL_TABLE}'
       MIGRATIONS_DATE_TYPE_SQL: '${MIGRATIONS_DATE_TYPE_SQL}'
-      DEFAULT_RL_CRON_SHEDULE: '${DEFAULT_RL_CRON_SHEDULE}'
+      DEFAULT_RL_CRON_SCHEDULE: '${DEFAULT_RL_CRON_SCHEDULE}'
       PORT: '${DEEPLINKS_PORT}'
 networks:
   network:
