--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
     "chai": "^4.3.7",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
