--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
     "wait-on": "^7.0.1"
   },
   "peerDependencies": {
-    "react": "*",
-    "@deep-foundation/deepcase": "^0.0.40"
+    "react": "*"
   },
   "engines": {
     "node": "^18.16.1"
