--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "unmigrate": "npm run package:build && npx migrate@latest down --matches '*.js'",
     "migrate-s-h": "npm run package:build && npx migrate@latest up 1693460330175-sync-handlers-update --matches '*.js'",
     "unmigrate-s-h": "npm run package:build && npx migrate@latest down 1693460330175-sync-handlers-update --matches '*.js'",
-    "remigrate-s-h": "npm run unmigrate-s-h && npm run migrate-s-h",
+    "remigrate-s-h": "npm run unmigrate-s-h && npm run migrate",
     "start-engine-docker": "npm run start-engine-docker-core",
     "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura && npm run docker",
     "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
