new envs for deepcase docker

--- a/local/deepcase/docker-compose.yml
+++ b/local/deepcase/docker-compose.yml
@@ -17,6 +17,8 @@ services:
       DEEPLINKS_HASURA_SECRET: '${DEEPLINKS_HASURA_SECRET}'
       NEXT_PUBLIC_DEEPLINKS_SERVER: '${NEXT_PUBLIC_DEEPLINKS_SERVER}'
       NEXT_PUBLIC_ENGINES: '${NEXT_PUBLIC_ENGINES}'
+      NEXT_PUBLIC_ENGINES_ROUTE: '${NEXT_PUBLIC_ENGINES_ROUTE}'
+      NEXT_PUBLIC_DISABLE_CONNECTOR: '${NEXT_PUBLIC_DISABLE_CONNECTOR}'
       NEXT_PUBLIC_GQL_PATH: '${NEXT_PUBLIC_GQL_PATH}'
       NEXT_PUBLIC_GQL_SSL: '${NEXT_PUBLIC_GQL_SSL}'
       NEXT_PUBLIC_DEEPLINKS_URL: '${NEXT_PUBLIC_DEEPLINKS_URL}'
