--- a/docker-prod/deep/docker-compose.yml
+++ b/docker-prod/deep/docker-compose.yml
@@ -17,6 +17,11 @@ services:
       - 'PGGSSENCMODE=disable'
       - 'PGSSLMODE=disable'
       - 'PGREQUIRESSL=0'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
   hasura:
     container_name: deep-hasura
     image: hasura/graphql-engine:v2.3.1
@@ -40,35 +45,11 @@ services:
       - 'HASURA_GRAPHQL_JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
       - 'HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS=true'
       - 'HASURA_GRAPHQL_UNAUTHORIZED_ROLE=link'
-  case:
-    container_name: deep-case
-    image: deepf/deepcase:main
-    networks:
-      - network
-    ports:
-    - "3007:3007"
-    restart: always
-    pull_policy: always
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-    extra_hosts: ['host.docker.internal:host-gateway']
-  links:
-    container_name: deep-links
-    image: deepf/deeplinks:main
-    networks:
-      - network
-    ports:
-    - "3006:3006"
-    restart: always
-    pull_policy: always
-    volumes:
-    - /var/run/docker.sock:/var/run/docker.sock
-    extra_hosts: ['host.docker.internal:host-gateway']
-    environment:
-      - 'DEEPLINKS_HASURA_PATH=deep-hasura:8080'
-      - 'DEEPLINKS_HASURA_SSL=0'
-      - 'DEEPLINKS_HASURA_SECRET=myadminsecretkey'
-      - 'JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
   storage:
     container_name: deep-hasura-storage
     image: nhost/hasura-storage:0.2.3
@@ -90,6 +71,11 @@ services:
       - 'POSTGRES_MIGRATIONS=0'
       - 'POSTGRES_MIGRATIONS_SOURCE=postgres://postgres:postgrespassword@host.docker.internal:5432/postgres?sslmode=disable'
     command: serve
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
   minio:
     container_name: deep-minio
     image: minio/minio
@@ -105,6 +91,50 @@ services:
       - 'MINIO_ROOT_PASSWORD=miniosecretkey'
     entrypoint: sh
     command: '-c ''mkdir -p /export/default && /opt/bin/minio server --address 0.0.0.0:9000 --console-address 0.0.0.0:32765 /export'''
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
+  case:
+    container_name: deep-case
+    image: deepf/deepcase:main
+    networks:
+      - network
+    ports:
+    - "3007:3007"
+    restart: always
+    pull_policy: always
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    extra_hosts: ['host.docker.internal:host-gateway']
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
+  links:
+    container_name: deep-links
+    image: deepf/deeplinks:main
+    networks:
+      - network
+    ports:
+    - "3006:3006"
+    restart: always
+    pull_policy: always
+    volumes:
+    - /var/run/docker.sock:/var/run/docker.sock
+    extra_hosts: ['host.docker.internal:host-gateway']
+    environment:
+      - 'DEEPLINKS_HASURA_PATH=deep-hasura:8080'
+      - 'DEEPLINKS_HASURA_SSL=0'
+      - 'DEEPLINKS_HASURA_SECRET=myadminsecretkey'
+      - 'JWT_SECRET={"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
 volumes:
   db-data:
     name: deep-db-data
