--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/debug": "^4.1.8",
     "@types/fs-extra": "^11.0.1",
     "clean-webpack-plugin": "^4.0.0",
     "fs-extra": "^11.1.1",
