--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "electron": "^13.1.9",
     "fix-path": "^3.0.0",
     "get-port": "^5.1.1",
+    "get-value": "^3.0.1",
     "gists": "^2.0.0",
     "graphql": "^15.8.0",
     "graphql-playground-middleware-express": "^1.7.23",
@@ -96,6 +97,7 @@
     "@testing-library/react": "^14.0.0",
     "@types/debug": "^4.1.8",
     "@types/fs-extra": "^11.0.1",
+    "@types/get-value": "^3.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "fs-extra": "^11.1.1",
     "jest": "^29.5.0",
