--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.301",
+  "version": "0.0.302",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -43,6 +43,7 @@
     "@deep-foundation/react-hasura": "^0.0.22",
     "@deep-foundation/store": "^0.0.25",
     "@deep-foundation/tsx": "^0.0.4",
+    "@react-hook/debounce": "^4.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
     "@types/react": "^18.2.15",
