--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@deep-foundation/materialized-path": "^0.0.29",
     "@deep-foundation/npm-packager": "^0.0.38",
     "@deep-foundation/react-hasura": "^0.0.22",
-    "@deep-foundation/store": "^0.0.25",
     "@deep-foundation/tsx": "^0.0.4",
     "@react-hook/debounce": "^4.0.0",
     "@types/jest": "^29.5.1",
@@ -88,7 +87,8 @@
     "wait-on": "^7.0.1"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "*",
+    "@deep-foundation/store": "~0.0.25"
   },
   "engines": {
     "node": "^18"
