--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "@deep-foundation/store": "^0.0.25",
     "@apollo/client": "^3.7.14",
     "@deep-foundation/hasura": "^0.0.53",
-    "@deep-foundation/react-hasura": "^0.0.23",
+    "@deep-foundation/react-hasura": "~0.0.24",
     "@deep-foundation/materialized-path": "^0.0.29",
     "graphql": "^15.8.0",
     "graphql-playground-middleware-express": "^1.7.23",
