--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "dependencies": {
     "@deep-foundation/npm-packager": "^0.0.38",
-    "@deep-foundation/tsx": "^0.0.4",
+    "@deep-foundation/tsx": "^0.0.5",
     "@react-hook/debounce": "^4.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
@@ -76,19 +76,19 @@
     "wait-on": "^7.0.1"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "@deep-foundation/store": "~0.0.25",
     "@apollo/client": "^3.7.14",
     "@deep-foundation/hasura": "~0.0.53",
-    "@deep-foundation/react-hasura": "~0.0.24",
     "@deep-foundation/materialized-path": "~0.0.30",
+    "@deep-foundation/react-hasura": "~0.0.24",
+    "@deep-foundation/store": "~0.0.25",
+    "apollo-server": "^2.26.1",
+    "apollo-server-core": "^3.12.0",
+    "apollo-server-express": "^3.12.0",
     "graphql": "^15.8.0",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-tag": "^2.12.6",
     "http-proxy-middleware": "^2.0.6",
-    "apollo-server": "^2.26.1",
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0"
+    "react": "^18.0.0"
   },
   "engines": {
     "node": "^18"
