--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,16 @@
 {
+  "extends": "@tsconfig/recommended/tsconfig.json",
+  "exclude": [
+    "jest.config.ts",
+  ],
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
+    "jsx": "react",
+    "declaration": true,
     "sourceMap": true,
     "noImplicitAny": false,
-    "removeComments": true,
-    "jsx": "react",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "target": "es2015",
-    "skipLibCheck": true,
-    "lib": [
-      "dom",
-      "es6",
-      "es7",
-      "es2022.error"
-    ],
+    "strictNullChecks": false,
+    "strict": false,
     "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
-    "declaration": true,
+    "target": "ES2022"
   }
 }
