--- a/package.json
+++ b/package.json
@@ -76,19 +76,19 @@
     "wait-on": "^7.0.1"
   },
   "peerDependencies": {
+    "react": "^18.0.0",
+    "@deep-foundation/store": "~0.0.25",
     "@apollo/client": "^3.7.14",
     "@deep-foundation/hasura": "~0.0.53",
-    "@deep-foundation/materialized-path": "~0.0.30",
     "@deep-foundation/react-hasura": "~0.0.24",
-    "@deep-foundation/store": "~0.0.25",
-    "apollo-server": "^2.26.1",
-    "apollo-server-core": "^3.12.0",
-    "apollo-server-express": "^3.12.0",
+    "@deep-foundation/materialized-path": "~0.0.30",
     "graphql": "^15.8.0",
     "graphql-playground-middleware-express": "^1.7.23",
     "graphql-tag": "^2.12.6",
     "http-proxy-middleware": "^2.0.6",
-    "react": "^18.0.0"
+    "apollo-server": "^2.26.1",
+    "apollo-server-core": "^3.12.0",
+    "apollo-server-express": "^3.12.0"
   },
   "engines": {
     "node": "^18"
@@ -96,7 +96,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
-    "@tsconfig/recommended": "^1.0.3",
     "@types/debug": "^4.1.8",
     "@types/fs-extra": "^11.0.1",
     "@types/get-value": "^3.0.3",
