--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,17 @@
 {
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "noImplicitAny": false,
-    "removeComments": true,
-    "jsx": "react",
-    "module": "ESNext",
-    "moduleResolution": "node",
-    "target": "es2015",
-    "skipLibCheck": true,
-    "lib": [
-      "dom",
-      "es6",
-      "es7",
-      "es2022.error"
-    ],
+    "target": "ESNext",
+    "jsx": "react-jsx",
+    "module": "NodeNext",
     "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "isolatedModules": true,
     "declaration": true,
-  }
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "NodeNext",
+    "skipLibCheck": true,
+    // Only for hasura, react-hasura, materialized-path, deeplinks because they are bad typed
+    "strictNullChecks": false,
+    "strict": false,
+
+  },
 }
