Revert "Update tsconfig"
This reverts commit 0b4bc53f051d05cdd09ce6578cfb952e88ebcd6f.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES2022",
     "jsx": "react-jsx",
     "module": "NodeNext",
     "resolveJsonModule": true,
