update to use workspaces

--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "unmigrate-s-h": "npm run package:build && npx migrate@latest down 1693460330175-sync-handlers-update --matches '*.js'",
     "remigrate-s-h": "npm run unmigrate-s-h && npm run migrate",
     "start-engine-docker": "npm run start-engine-docker-core",
-    "start-engine-docker-core": "cd ./node_modules/@deep-foundation/hasura && npm run docker",
-    "stop-engine-docker": "cd ./node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
+    "start-engine-docker-core": "cd ./../../node_modules/@deep-foundation/hasura && npm run docker",
+    "stop-engine-docker": "cd ./../../node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
     "start-deeplinks-docker": "cd local && docker-compose pull && docker-compose -p deep up -d",
     "stop-deeplinks-docker": "cd local && docker-compose -p deep down",
     "snapshot:create": "node snapshots/create.js",
