Add warmup script
Closes https://github.com/deep-foundation/deeplinks/issues/269

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "stop-deeplinks-docker": "cd local && docker-compose -p deep down",
     "snapshot:create": "node snapshots/create.js",
     "snapshot:last": "node snapshots/last.js",
-    "snapshot:dump": "node snapshots/dump.js"
+    "snapshot:dump": "node snapshots/dump.js",
+    "warmup": "node warmup.js"
   },
   "bin": {
     "deeplinks": "./call.cjs"
