--- a/local/actions/docker-compose.yml
+++ b/local/actions/docker-compose.yml
@@ -78,7 +78,7 @@ services:
         max-file: "3"
   minio:
     container_name: deep-minio
-    image: minio/minio
+    image: minio/minio:RELEASE.2023-09-30T07-02-29Z
     restart: always
     volumes:
       - 'minio-data:/export'
