--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "deeplinks": "./call.cjs"
   },
   "dependencies": {
+    "@cybercongress/cyber-js": "^0.3.6",
     "@deep-foundation/npm-packager": "^0.0.39",
     "@deep-foundation/tsx": "^0.0.5",
+    "@keplr-wallet/types": "^0.11.64",
     "@react-hook/debounce": "^4.0.0",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
