--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@deep-foundation/tsx": "^0.0.5",
     "@keplr-wallet/types": "^0.11.64",
     "@react-hook/debounce": "^4.0.0",
+    "@tanstack/react-query": "^4.36.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
     "@types/react": "^18.2.15",
