--- a/package.json
+++ b/package.json
@@ -38,32 +38,53 @@
     "deeplinks": "./call.cjs"
   },
   "dependencies": {
+    "@chainsafe/libp2p-noise": "^14.1.0",
+    "@chainsafe/libp2p-yamux": "^6.0.1",
     "@cybercongress/cyber-js": "^0.3.6",
     "@deep-foundation/npm-packager": "^0.0.39",
     "@deep-foundation/tsx": "^0.0.5",
+    "@helia/unixfs": "^1.4.3",
     "@keplr-wallet/types": "^0.11.64",
+    "@libp2p/bootstrap": "^10.0.11",
+    "@libp2p/webrtc": "^4.0.15",
+    "@libp2p/webtransport": "^4.0.15",
+    "@nftstorage/ipfs-cluster": "^5.0.1",
     "@react-hook/debounce": "^4.0.0",
+    "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.36.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
+    "@types/ramda": "^0.28.25",
     "@types/react": "^18.2.15",
     "atob": "^2.1.2",
     "axios": "^1.4.0",
+    "blockstore-idb": "^1.1.7",
     "body-parser": "^1.20.2",
     "buffer": "^6.0.3",
     "chai": "^4.3.7",
+    "comlink": "^4.4.1",
     "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
+    "cyb-cozo-lib-wasm": "^0.7.141",
+    "datastore-idb": "^2.1.7",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "electron": "^13.1.9",
+    "file-type": "^19.0.0",
     "fix-path": "^3.0.0",
     "get-port": "^5.1.1",
     "get-value": "^3.0.1",
     "gists": "^2.0.0",
+    "graphql-request": "^6.1.0",
+    "helia": "^2.1.0",
     "internal-ip": "^6.2.0",
+    "ipfs-core": "^0.18.1",
+    "ipfs-core-types": "^0.14.1",
+    "is-svg": "^5.0.0",
     "jsonschema": "^1.4.1",
     "jsonwebtoken": "^9.0.0",
+    "kubo-rpc-client": "^3.0.2",
+    "libp2p": "^0.46.21",
     "mathjs": "^11.8.0",
     "microtime": "^3.1.1",
     "moesif-nodejs": "^3.3.3",
@@ -71,14 +92,21 @@
     "node-fetch": "^2.6.11",
     "nodemon": "^2.0.22",
     "prompt": "^1.3.0",
+    "ramda": "^0.29.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "rimraf": "^5.0.1",
     "root-path-electron": "^1.3.3",
+    "rxjs": "^7.8.1",
     "sudo-prompt": "^9.2.1",
     "supports-color": "^9.3.1",
+    "uint8arrays": "^5.0.1",
     "uniqid": "^5.4.0",
     "url": "^0.11.0",
-    "wait-on": "^7.0.1"
+    "wait-on": "^7.0.1",
+    "worker-url": "^1.1.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.7.14",
