--- a/.github/workflows/server-build.yaml
+++ b/.github/workflows/server-build.yaml
@@ -12,15 +12,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: |
+          sudo apt-get update && sudo apt-get upgrade
+          sudo apt install -y git curl docker.io docker-compose
+
       - name: Allow ports 3006 and 3007
         run: |
           sudo ufw allow 3006
           sudo ufw allow 3007
-
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y git curl docker.io docker-compose
 
       - name: Set up Docker
         run: |
