--- a/.github/workflows/production-build.yaml
+++ b/.github/workflows/production-build.yaml
@@ -14,6 +14,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          sudo apt-get remove containerd.io
           sudo apt-get update && sudo apt-get upgrade
           sudo apt install -y git curl docker.io docker-compose
 
