--- a/.github/workflows/production-build.yaml
+++ b/.github/workflows/production-build.yaml
@@ -12,10 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: Update dependencies
         run: |
           sudo apt-get update && sudo apt-get upgrade
+
+      - name: Install dependencies
+        run: |
           sudo apt install -y git curl
+
       - name: Allow ports 3006 and 3007
         run: |
           sudo ufw allow 3006
