--- a/.github/workflows/server-build.yaml
+++ b/.github/workflows/server-build.yaml
@@ -12,22 +12,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: Update dependencies
         run: |
           sudo apt-get update && sudo apt-get upgrade
-          sudo apt install -y git curl docker.io docker-compose
+
+      - name: Install dependencies
+        run: |
+          sudo apt install -y git curl
 
       - name: Allow ports 3006 and 3007
         run: |
           sudo ufw allow 3006
           sudo ufw allow 3007
-
-      - name: Set up Docker
-        run: |
-          sudo groupadd docker
-          sudo usermod -aG docker $USER
-          docker run hello-world
-          docker rm $(docker ps -a -q --filter "ancestor=hello-world")
 
       - name: Install Node Version Manager (NVM)
         run: |
@@ -52,8 +48,10 @@ jobs:
           export MINIO_ACCESS_KEY=$(node -e "console.log(require('crypto').randomBytes(24).toString('hex'));")
           export MINIO_SECRET_KEY=$(node -e "console.log(require('crypto').randomBytes(24).toString('hex'));")
 
-          # Create call-options.json
-          echo '{
+      - name: Create call-options.json
+        run: |
+          tee call-options.json << JSON
+          {
             "operation": "run",
             "envs": {
               "DEEPLINKS_PUBLIC_URL": "http://$DEEPLINKS_HOST",
@@ -63,9 +61,26 @@ jobs:
               "NEXT_PUBLIC_DEEPLINKS_SERVER": "http://$DEEPCASE_HOST",
               "NEXT_PUBLIC_ENGINES_ROUTE": "0",
               "NEXT_PUBLIC_DISABLE_CONNECTOR": "1",
-              "JWT_SECRET": "{\"type\":\"HS256\",\"key\":\"$(node -e "console.log(require('crypto').randomBytes(50).toString('base64'));")\"}",
+              "JWT_SECRET": "'{\"type\":\"HS256\",\"key\":\"$(node -e "console.log(require('crypto').randomBytes(50).toString('base64'));")\"}'",
               "DEEPLINKS_HASURA_STORAGE_URL": "http://host.docker.internal:8000/",
               "HASURA_GRAPHQL_ADMIN_SECRET": "$HASURA_ADMIN_SECRET",
-              "MIGRATIONS_HASURA_SECRET": "$HASURA_ADMIN_SECRET"
+              "MIGRATIONS_HASURA_SECRET": "$HASURA_ADMIN_SECRET",
+              "DEEPLINKS_HASURA_SECRET": "$HASURA_ADMIN_SECRET",
+              "POSTGRES_PASSWORD": "$POSTGRES_PASSWORD",
+              "HASURA_GRAPHQL_DATABASE_URL": "postgres://postgres:$POSTGRES_PASSWORD@postgres:5432/postgres",
+              "POSTGRES_MIGRATIONS_SOURCE": "postgres://postgres:$POSTGRES_PASSWORD@host.docker.internal:5432/postgres?sslmode=disable",
+              "RESTORE_VOLUME_FROM_SNAPSHOT": "0",
+              "MANUAL_MIGRATIONS": "1",
+              "MINIO_ROOT_USER": "$MINIO_ACCESS_KEY",
+              "MINIO_ROOT_PASSWORD": "$MINIO_SECRET_KEY",
+              "S3_ACCESS_KEY": "$MINIO_ACCESS_KEY",
+              "S3_SECRET_KEY": "$MINIO_SECRET_KEY"
             }
-          }' > call-options.json
+          }
+          JSON
+
+      - name: Run deeplinks
+        run: |
+          export DEEPLINKS_CALL_OPTIONS=$(cat call-options.json)
+          export DEBUG="deeplinks:engine:*,deeplinks:migrations:*"
+          deeplinks
