--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@cybercongress/cyber-js": "^0.3.6",
     "@deep-foundation/npm-packager": "^0.0.43",
     "@deep-foundation/tsx": "^0.0.5",
+    "@helia/strings": "^3.0.3",
     "@helia/unixfs": "^1.4.3",
     "@keplr-wallet/types": "^0.11.64",
     "@libp2p/bootstrap": "^10.0.11",
@@ -50,6 +51,7 @@
     "@nftstorage/ipfs-cluster": "^5.0.1",
     "@react-hook/debounce": "^4.0.0",
     "@reduxjs/toolkit": "^1.9.7",
+    "@stdlib/buffer-from-string": "^0.2.1",
     "@tanstack/react-query": "^4.36.1",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.2.4",
