--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "bundle-jsonschema": "export LIBNAME=jsonschema;  node ./bundles/deeplinks-bundler-prepare.js && webpack && node ./bundles/deeplinks-bundler-postbundle.js",
     "bundle-jsonschema-test": "node ./bundles/jsonschema.js",
     "bundle-all": "npm run bundle-mathjs && npm run bundle-jsonschema && npm run bundle-jsonschema-test && npm run bundle-mathjs-test",
+    "package:refresh": "rm -rf node_modules; rm -f package-lock.json; npm i --package-lock-only --workspaces false",
     "package:build": "tsc --project tsconfig.json",
     "package:watch": "tsc -w --project tsconfig.json",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./benchmarks && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && cd ..) && (cd ./imports/router && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./tests && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
     "package:publish": "npm run package:build && npm publish --access public && npm run package:unbuild",
-    "package:release": "npm version patch && git push && git push --tags",
+    "package:release": "npm version patch && git push",
     "test": "npm run package:build && cross-env DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey DOCKER_DEEPLINKS_URL=http://localhost:3006 NODE_OPTIONS=--experimental-vm-modules jest --config jest.config.js *.js --testTimeout=50000",
     "benchmark": "export DEEPLINKS_HASURA_PATH=localhost:8080; export DEEPLINKS_HASURA_SSL=0; export DEEPLINKS_HASURA_SECRET=myadminsecretkey; ts-node benchmarks/index.ts",
     "migrate": "npm run package:build && npx migrate@latest up --matches '*.js'",
