--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bundle-jsonschema": "export LIBNAME=jsonschema;  node ./bundles/deeplinks-bundler-prepare.js && webpack && node ./bundles/deeplinks-bundler-postbundle.js",
     "bundle-jsonschema-test": "node ./bundles/jsonschema.js",
     "bundle-all": "npm run bundle-mathjs && npm run bundle-jsonschema && npm run bundle-jsonschema-test && npm run bundle-mathjs-test",
-    "package:refresh": "rm -rf node_modules; rm -f package-lock.json; npm i --package-lock-only --workspaces false",
+    "package:refresh": "rm -rf node_modules; rm -f package-lock.json; npm i --workspaces false",
     "package:build": "tsc --project tsconfig.json",
     "package:watch": "tsc -w --project tsconfig.json",
     "package:unbuild": "rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && (cd ./migrations && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../) && (cd ./imports/gql && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./benchmarks && rm -f ./*.js; rm -f ./*.js.map; rm -f ./*.d.ts && cd ..) && (cd ./imports/router && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../..) && (cd ./tests && rimraf ./*.js && rimraf ./*.js.map && rimraf ./*.d.ts && cd ../)",
