--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.343",
+  "version": "0.0.344",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
@@ -58,6 +58,7 @@
     "@types/node": "^20.2.4",
     "@types/ramda": "^0.28.25",
     "@types/react": "^18.2.15",
+    "async": "^3.2.5",
     "atob": "^2.1.2",
     "axios": "^1.4.0",
     "blockstore-idb": "^1.1.7",
