--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "rimraf": "^5.0.1",
     "root-path-electron": "^1.3.3",
     "rxjs": "^7.8.1",
+    "serialize-error": "^11.0.3",
     "spawn-sync": "^2.0.0",
     "sudo-prompt": "^9.2.1",
     "supports-color": "^9.3.1",
