--- a/local/docker-compose.yml
+++ b/local/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       MOESIF_TOKEN: '${MOESIF_TOKEN}'
       DOCKER: 1
       DEEPLINKS_PUBLIC_URL: '${DEEPLINKS_PUBLIC_URL}'
+      NEXT_PUBLIC_DEEPLINKS_URL: '${DEEPLINKS_PUBLIC_URL}'
       NEXT_PUBLIC_DEEPLINKS_SERVER: '${NEXT_PUBLIC_DEEPLINKS_SERVER}'
       GITPOD_GIT_USER_EMAIL: '${GITPOD_GIT_USER_EMAIL}'
       GITPOD_TASKS: '${GITPOD_TASKS}'
