--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "warmup": "node warmup.js"
   },
   "bin": {
-    "deeplinks": "./call.cjs"
+    "deeplinks": "./call.mjs"
   },
   "dependencies": {
     "@chainsafe/libp2p-yamux": "^6.0.2",
