docker fail log

--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -78,4 +78,16 @@ jobs:
       - name: Image digest
         run: echo ${{ steps.docker_build_push.outputs.digest }}
       - name: Collect Docker Logs
+        if: failure()
         uses: jwalton/gh-docker-logs@v2.2.2
+        with:
+          dest: './logs'
+      - name: Tar logs
+        if: failure()
+        run: tar cvzf ./logs.tgz ./logs
+      - name: Upload logs to GitHub
+        if: failure()
+        uses: actions/upload-artifact@master
+        with:
+          name: logs.tgz
+          path: ./logs.tgz
