--- a/local/actions/docker-compose.yml
+++ b/local/actions/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       HASURA_GRAPHQL_LOG_LEVEL: ${DEEP_HASURA_GRAPHQL_LOG_LEVEL-debug}
       HASURA_GRAPHQL_ENABLED_LOG_TYPES: ${DEEP_HASURA_GRAPHQL_ENABLED_LOG_TYPES-startup,http-log,webhook-log,websocket-log,query-log}
       HASURA_GRAPHQL_ADMIN_SECRET: ${DEEP_HASURA_GRAPHQL_ADMIN_SECRET-myadminsecretkey}
-      HASURA_GRAPHQL_JWT_SECRET: ${DEEP_HASURA_GRAPHQL_JWT_SECRET-'{"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'}
+      HASURA_GRAPHQL_JWT_SECRET: ${JWT_SECRET}
       HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS: ${DEEP_HASURA_GRAPHQL_ENABLE_REMOTE_SCHEMA_PERMISSIONS-true}
       HASURA_GRAPHQL_UNAUTHORIZED_ROLE: ${DEEP_HASURA_GRAPHQL_UNAUTHORIZED_ROLE-undefined}
     logging:
@@ -129,7 +129,7 @@ services:
       DEEPLINKS_HASURA_PATH: ${DEEPLINKS_HASURA_PATH-deep-hasura:8080}
       DEEPLINKS_HASURA_SSL: ${DEEPLINKS_HASURA_SSL-0}
       DEEPLINKS_HASURA_SECRET: ${DEEPLINKS_HASURA_SECRET-myadminsecretkey}
-      JWT_SECRET: ${JWT_SECRET-'{"type":"HS256","key":"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R"}'}
+      JWT_SECRET: ${JWT_SECRET}
     logging:
       driver: "json-file"
       options:
