--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@deep-foundation/deeplinks",
-  "version": "0.0.417",
+  "version": "0.0.418",
   "license": "Unlicense",
   "type": "module",
   "scripts": {
-    "dev": "(cd local && docker-compose down || true) && cross-env PORT=3006 npm run launch",
-    "dev-local": "(cd local && docker-compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey PORT=3006 npm run launch",
+    "dev": "(cd local && docker compose down || true) && cross-env PORT=3006 npm run launch",
+    "dev-local": "(cd local && docker compose down || true) && cross-env npm_config_yes=true JWT_SECRET=\"{\\\"type\\\":\\\"HS256\\\",\\\"key\\\":\\\"3EK6FD+o0+c7tzBNVfjpMkNDi2yARAAKzQlk8O2IKoxQu4nF7EdAh8s3TwpHwrdWT6R\\\"}\" MIGRATIONS_HASURA_PATH=localhost:8080 MIGRATIONS_HASURA_SSL=0 MIGRATIONS_HASURA_SECRET=myadminsecretkey MIGRATIONS_DEEPLINKS_URL=http://host.docker.internal:3006 DEEPLINKS_HASURA_PATH=localhost:8080 DEEPLINKS_HASURA_SSL=0 DEEPLINKS_HASURA_SECRET=myadminsecretkey PORT=3006 npm run launch",
     "launch": "npm run package:build && node ./index.js;",
     "bundle-mathjs": "export LIBNAME=mathjs; node ./bundles/deeplinks-bundler-prepare.js && webpack && node ./bundles/deeplinks-bundler-postbundle.js",
     "bundle-mathjs-test": "node ./bundles/mathjs.js",
@@ -29,9 +29,9 @@
     "remigrate-s-h": "npm run unmigrate-s-h && npm run migrate",
     "start-engine-docker": "npm run start-engine-docker-core",
     "start-engine-docker-core": "cd ./../../node_modules/@deep-foundation/hasura && npm run docker",
-    "stop-engine-docker": "cd ./../../node_modules/@deep-foundation/hasura/local && docker-compose --project-name deep down",
-    "start-deeplinks-docker": "cd local && docker-compose pull && docker-compose -p deep up -d",
-    "stop-deeplinks-docker": "cd local && docker-compose -p deep down",
+    "stop-engine-docker": "cd ./../../node_modules/@deep-foundation/hasura/local && docker compose --project-name deep down",
+    "start-deeplinks-docker": "cd local && docker compose pull && docker compose -p deep up -d",
+    "stop-deeplinks-docker": "cd local && docker compose -p deep down",
     "snapshot:create": "node snapshots/create.js",
     "snapshot:last": "node snapshots/last.js",
     "snapshot:dump": "node snapshots/dump.js",
@@ -43,7 +43,7 @@
   "dependencies": {
     "@chainsafe/libp2p-yamux": "^6.0.2",
     "@cybercongress/cyber-js": "^0.3.6",
-    "@deep-foundation/hasura": "^0.0.65",
+    "@deep-foundation/hasura": "^0.0.67",
     "@deep-foundation/npm-packager": "^0.0.43",
     "@deep-foundation/tsx": "^0.0.5",
     "@helia/strings": "^3.0.3",
