--- a/.github/workflows/dockerize.yaml
+++ b/.github/workflows/dockerize.yaml
@@ -22,7 +22,7 @@ env:
   DEEPLINKS_HASURA_STORAGE_URL: http://deep-hasura-storage:8000/
   HASURA_ENDPOINT: http://deep-hasura:8080/v1
   DOCKER_DEEPLINKS_URL: http://deep-links:3006
-  MIGRATIONS_DEEPLINKS_URL: http://localhost:3006
+  MIGRATIONS_DEEPLINKS_URL: http://host.docker.internal:3006
   HASURA_GRAPHQL_ADMIN_SECRET: e9cd987d6c7dd8206a34f7790fed2a29
   MIGRATIONS_HASURA_SECRET: e9cd987d6c7dd8206a34f7790fed2a29
   DEEPLINKS_HASURA_SECRET: e9cd987d6c7dd8206a34f7790fed2a29
@@ -93,7 +93,7 @@ env:
   RESERVED_LIFETIME_MS: 86400000
   MIGRATIONS_DIR: /tmp/deep
   MIGRATIONS_HASURA_PATH: localhost:8080
-  DEEPLINKS_HASURA_PATH: localhost:8080
+  DEEPLINKS_HASURA_PATH: deep-hasura:8080
   MIGRATIONS_HASURA_SSL: 0
   DEEPLINKS_HASURA_SSL: 0
   DEBUG: deeplinks:*
